[gd_scene load_steps=13 format=3 uid="uid://b1n8aqbbnsjxg"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_e8g2a"]
[ext_resource type="TileSet" uid="uid://c163wx1fh0ydr" path="res://scenes/world.tres" id="1_o2oe1"]
[ext_resource type="Texture2D" uid="uid://d3tp30bwmcoab" path="res://PNG/Default (64px)/Characters/green_character.png" id="2_xn1he"]
[ext_resource type="Texture2D" uid="uid://cdmilkukmxicx" path="res://PNG/Default (64px)/Characters/green_hand.png" id="3_skrh2"]
[ext_resource type="Texture2D" uid="uid://d3ih4qokp7dnv" path="res://PNG/Default (64px)/Items/weapon_axe_large.png" id="4_jfj22"]
[ext_resource type="Texture2D" uid="uid://dois2jgluhl04" path="res://PNG/Default (64px)/Characters/yellow_character.png" id="5_y64k6"]
[ext_resource type="Texture2D" uid="uid://b7bcsb65x2og0" path="res://PNG/Default (64px)/Characters/yellow_hand.png" id="6_a06kj"]
[ext_resource type="Texture2D" uid="uid://cebchm6l3e0of" path="res://PNG/Default (64px)/Items/weapon_pole.png" id="7_p4gsv"]
[ext_resource type="Texture2D" uid="uid://ccwbt7ynn1bya" path="res://PNG/Default (64px)/Items/shield_curved.png" id="8_lnwvd"]
[ext_resource type="Texture2D" uid="uid://bknmof2xsq8m2" path="res://icon.svg" id="9_rwwwv"]
[ext_resource type="FontFile" uid="uid://cyqur63yurk8w" path="res://fonts/Apasih.otf" id="10_3fnln"]

[sub_resource type="Theme" id="Theme_m7rif"]
default_font = ExtResource("10_3fnln")
default_font_size = 50

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e8g2a")

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource("1_o2oe1")
format = 2
layer_0/tile_data = PackedInt32Array(0, 458753, 0, 65536, 458753, 0, 131072, 458753, 0, 196608, 262145, 6, 262144, 458753, 0, 327680, 458753, 0, 393216, 458753, 0, 458752, 1, 1, 524288, 1, 1, 589824, 65537, 1610612740, 655360, 1, 1, 720896, 458753, 0, 786432, 458753, 0, 851968, 458753, 0, 917504, 458753, 0, 983040, 458753, 0, 1048576, 458753, 0, 1, 458753, 0, 65537, 262145, 5, 131073, 458753, 0, 196609, 458753, 0, 262145, 458753, 0, 327681, 1, 1, 393217, 1, 1, 458753, 1, 1, 524289, 1, 1, 589825, 65537, 6, 655361, 1, 1, 720897, 458753, 0, 786433, 458753, 0, 851969, 458753, 0, 917505, 458753, 0, 983041, 458753, 0, 1048577, 458753, 0, 2, 458753, 0, 65538, 458753, 0, 131074, 458753, 0, 196610, 458753, 0, 262146, 1, 1, 327682, 1, 1, 393218, 1, 1, 458754, 1, 805306373, 524290, 1, 1, 589826, 65537, 1610612740, 655362, 1, 1, 720898, 1, 1, 786434, 458753, 0, 851970, 458753, 0, 917506, 65537, 0, 983042, 65537, 1, 1048578, 65537, 1, 3, 458753, 0, 65539, 458753, 0, 131075, 458753, 0, 196611, 1, 1, 262147, 1, 1, 327683, 1, 1, 393219, 1, 1, 458755, 1, 1, 524291, 1, 1, 589827, 65537, 1610612740, 655363, 1, 1, 720899, 1, 1, 786435, 1, 1, 851971, 458753, 0, 917507, 65537, 1610612737, 983043, 458753, 0, 1048579, 262145, 6, 4, 458753, 0, 65540, 458753, 0, 131076, 458753, 0, 196612, 1, 1, 262148, 1, 1, 327684, 1, 1, 393220, 1, 1, 458756, 1, 1, 524292, 1, 1, 589828, 65537, 1610612740, 655364, 1, 1, 720900, 1, 1, 786436, 1, 1, 851972, 458753, 0, 917508, 65537, 1610612737, 983044, 458753, 0, 1048580, 458753, 0, 5, 458753, 0, 65541, 458753, 0, 131077, 1, 1, 196613, 1, 1, 262149, 1, 5, 327685, 1, 1, 393221, 1, 1, 458757, 1, 1, 524293, 1, 1, 589829, 65537, 1610612740, 655365, 1, 1, 720901, 1, 1, 786437, 1, 1, 851973, 458753, 0, 917509, 65537, 1610612737, 983045, 458753, 0, 1048581, 458753, 0, 6, 458753, 0, 65542, 458753, 0, 131078, 1, 1, 196614, 1, 1, 262150, 1, 1, 327686, 1, 1, 393222, 1, 1, 458758, 1, 1, 524294, 1, 1, 589830, 65537, 1610612740, 655366, 1, 1, 720902, 1, 1, 786438, 1, 1, 851974, 458753, 0, 917510, 65537, 1342177280, 983046, 65537, 1, 1048582, 65537, 1, 7, 458753, 0, 65543, 262145, 6, 131079, 1, 1, 196615, 1, 1, 262151, 1, 1, 327687, 1, 1, 393223, 1, 1, 458759, 1, 1, 524295, 1, 1, 589831, 65537, 1610612740, 655367, 1, 1, 720903, 1, 1, 786439, 1, 1, 851975, 458753, 0, 917511, 458753, 0, 983047, 458753, 0, 1048583, 458753, 0, 8, 458753, 0, 65544, 458753, 0, 131080, 1, 1, 196616, 1, 1, 262152, 1, 1, 327688, 1, 1, 393224, 1, 1, 458760, 1, 1, 524296, 1, 1, 589832, 65537, 1610612740, 655368, 1, 1, 720904, 1, 1, 786440, 1, 1, 851976, 458753, 0, 917512, 458753, 0, 983048, 458753, 0, 1048584, 458753, 0, 9, 458753, 0, 65545, 458753, 0, 131081, 1, 1, 196617, 1, 1342177285, 262153, 1, 1, 327689, 1, 1, 393225, 1, 5, 458761, 1, 1, 524297, 1, 1, 589833, 65537, 1610612740, 655369, 1, 1, 720905, 1, 1, 786441, 1, 1, 851977, 458753, 0, 917513, 458753, 0, 983049, 262145, 7, 1048585, 458753, 0, 10, 458753, 0, 65546, 458753, 0, 131082, 1, 1, 196618, 1, 1, 262154, 1, 1, 327690, 1, 1, 393226, 1, 1, 458762, 1, 1, 524298, 1, 1, 589834, 65537, 1610612740, 655370, 1, 1, 720906, 1, 3, 786442, 1, 1, 851978, 458753, 0, 917514, 458753, 0, 983050, 458753, 0, 1048586, 458753, 0, 11, 458753, 0, 65547, 458753, 0, 131083, 1, 1, 196619, 1, 1, 262155, 1, 1, 327691, 1, 1, 393227, 1, 1, 458763, 1, 1, 524299, 1, 1, 589835, 65537, 1610612740, 655371, 1, 1, 720907, 1, 1, 786443, 1, 1, 851979, 1, 1, 917515, 458753, 0, 983051, 458753, 0, 1048587, 458753, 0, 12, 458753, 0, 65548, 458753, 0, 131084, 1, 1, 196620, 1, 1, 262156, 1, 1, 327692, 1, 1, 393228, 1, 1, 458764, 1, 1, 524300, 1, 1, 589836, 65537, 1610612740, 655372, 1, 1, 720908, 1, 1, 786444, 1, 1, 851980, 1, 1, 917516, 458753, 0, 983052, 458753, 0, 1048588, 262145, 6, 13, 262145, 6, 65549, 458753, 0, 131085, 1, 1, 196621, 1, 1, 262157, 1, 1, 327693, 1, 1, 393229, 1, 1, 458765, 1, 1, 524301, 1, 1, 589837, 65537, 1342177283, 655373, 65537, 4, 720909, 65537, 4, 786445, 65537, 4, 851981, 65537, 1610612742, 917517, 65537, 4, 983053, 65537, 4, 1048589, 65537, 4, 14, 458753, 0, 65550, 458753, 0, 131086, 458753, 0, 196622, 1, 1, 262158, 1, 1610612741, 327694, 1, 1, 393230, 1, 1, 458766, 1, 1, 524302, 1, 1, 589838, 1, 1, 655374, 1, 1, 720910, 1, 1, 786446, 1, 1, 851982, 1, 1, 917518, 458753, 0, 983054, 458753, 0, 1048590, 458753, 0, 15, 458753, 0, 65551, 458753, 0, 131087, 458753, 0, 196623, 1, 1, 262159, 1, 1, 327695, 1, 1, 393231, 1, 1, 458767, 1, 1, 524303, 1, 1, 589839, 1, 1, 655375, 1, 1, 720911, 1, 1, 786447, 1, 1, 851983, 1, 1, 917519, 458753, 0, 983055, 262145, 6, 1048591, 458753, 0, 16, 458753, 0, 65552, 458753, 0, 131088, 458753, 0, 196624, 131073, 805306373, 262160, 196609, 1342177280, 327696, 196609, 1342177280, 393232, 196609, 1342177280, 458768, 196609, 1342177280, 524304, 196609, 1342177280, 589840, 196609, 1342177280, 655376, 196609, 1342177280, 720912, 131073, 1342177285, 786448, 1, 1, 851984, 1, 1, 917520, 458753, 0, 983056, 458753, 0, 1048592, 1, 7, 17, 458753, 0, 65553, 262145, 6, 131089, 458753, 0, 196625, 196609, 805306368, 262161, 393217, 3, 327697, 1, 1, 393233, 131073, 1610612743, 458769, 196609, 1610612736, 524305, 131073, 1073741831, 589841, 1, 1, 655377, 458753, 2, 720913, 196609, 0, 786449, 1, 1, 851985, 458753, 0, 917521, 458753, 0, 983057, 458753, 0, 1048593, 1, 7, 18, 458753, 0, 65554, 458753, 0, 131090, 458753, 0, 196626, 196609, 805306368, 262162, 1, 1, 327698, 1, 1, 393234, 1, 1, 458770, 1, 1, 524306, 1, 1, 589842, 1, 1, 655378, 1, 1, 720914, 196609, 0, 786450, 1, 1, 851986, 458753, 0, 917522, 458753, 0, 983058, 458753, 0, 1048594, 1, 7, 19, 458753, 0, 65555, 458753, 0, 131091, 458753, 0, 196627, 196609, 805306368, 262163, 393217, 1342177281, 327699, 1, 1, 393235, 1, 1, 458771, 1, 1, 524307, 1, 1, 589843, 1, 1, 655379, 262145, 805306370, 720915, 196609, 3, 786451, 458753, 0, 851987, 458753, 0, 917523, 458753, 0, 983059, 262145, 6, 1048595, 1, 7, 20, 458753, 0, 65556, 458753, 0, 131092, 1, 1, 196628, 196609, 805306368, 262164, 393217, 0, 327700, 1, 1, 393236, 1, 1, 458772, 1, 1, 524308, 1, 1, 589844, 1, 1, 655380, 262145, 536870914, 720916, 196609, 3, 786452, 458753, 0, 851988, 458753, 0, 917524, 458753, 0, 983060, 1, 7, 1048596, 1, 7, 21, 458753, 0, 65557, 458753, 0, 131093, 1, 1, 196629, 196609, 805306368, 262165, 393217, 1610612737, 327701, 1, 1, 393237, 1, 1, 458773, 1, 1, 524309, 1, 1, 589845, 1, 1, 655381, 1, 1, 720917, 196609, 0, 786453, 458753, 0, 851989, 262145, 7, 917525, 458753, 0, 983061, 1, 7, 1048597, 1, 7, 22, 458753, 0, 65558, 458753, 0, 131094, 1, 1, 196630, 131073, 536870919, 262166, 196609, 1342177280, 327702, 196609, 1342177280, 393238, 196609, 1342177280, 458774, 131073, 1342177285, 524310, 1, 1, 589846, 1, 1, 655382, 262145, 805306372, 720918, 196609, 0, 786454, 458753, 0, 851990, 458753, 0, 917526, 262145, 6, 983062, 1, 7, 1048598, 1, 7, 23, 458753, 0, 65559, 458753, 0, 131095, 1, 1, 196631, 1, 1, 262167, 327681, 0, 327703, 458753, 1342177284, 393239, 327681, 2, 458775, 196609, 0, 524311, 1, 1, 589847, 1, 1, 655383, 1, 1, 720919, 196609, 0, 786455, 458753, 0, 851991, 458753, 0, 917527, 458753, 0, 983063, 1, 7, 1048599, 1, 7, 24, 458753, 0, 65560, 1, 1, 131096, 1, 1, 196632, 1, 1, 262168, 1, 1, 327704, 1, 1, 393240, 1, 1, 458776, 196609, 0, 524312, 262145, 1342177284, 589848, 1, 1, 655384, 458753, 1, 720920, 196609, 0, 786456, 458753, 0, 851992, 458753, 0, 917528, 458753, 0, 983064, 1, 7, 1048600, 1, 7, 25, 458753, 0, 65561, 458753, 0, 131097, 1, 1, 196633, 1, 1, 262169, 1, 1, 327705, 1, 1, 393241, 1, 1, 458777, 131073, 1610612743, 524313, 196609, 1610612736, 589849, 196609, 1610612736, 655385, 196609, 1610612736, 720921, 131073, 5, 786457, 458753, 0, 851993, 458753, 0, 917529, 1, 7, 983065, 1, 7, 1048601, 1, 7, 26, 458753, 0, 65562, 458753, 0, 131098, 1, 1, 196634, 1, 1, 262170, 393217, 6, 327706, 1, 1, 393242, 1, 1, 458778, 131073, 805306372, 524314, 196609, 1342177280, 589850, 196609, 1342177285, 655386, 196609, 1342177280, 720922, 131073, 1342177284, 786458, 458753, 0, 851994, 458753, 0, 917530, 1, 7, 983066, 1, 7, 1048602, 1, 7, 27, 458753, 0, 65563, 458753, 0, 131099, 1, 1, 196635, 393217, 1610612743, 262171, 1, 1, 327707, 1, 1, 393243, 1, 1, 458779, 196609, 805306372, 524315, 1, 6, 589851, 1, 6, 655387, 1, 6, 720923, 196609, 0, 786459, 458753, 0, 851995, 262145, 6, 917531, 1, 7, 983067, 1, 7, 1048603, 1, 7, 28, 262145, 6, 65564, 458753, 0, 131100, 1, 1, 196636, 1, 1, 262172, 1, 1, 327708, 1, 1, 393244, 1, 1, 458780, 196609, 805306372, 589852, 1, 6, 655388, 1, 6, 720924, 196609, 0, 786460, 458753, 0, 851996, 458753, 0, 917532, 1, 7, 983068, 1, 7, 1048604, 1, 7, 29, 458753, 0, 65565, 458753, 0, 131101, 458753, 0, 196637, 1, 1, 262173, 1, 1, 327709, 1, 1, 393245, 1, 1, 458781, 131073, 1610612740, 524317, 196609, 1610612736, 589853, 196609, 1610612736, 655389, 196609, 1610612736, 720925, 131073, 4, 786461, 458753, 0, 851997, 458753, 0, 917533, 1, 7, 983069, 1, 7, 1048605, 1, 7, 524316, 1, 6)

[node name="GreenCharacter" type="Sprite2D" parent="."]
position = Vector2(1207, 448)
texture = ExtResource("2_xn1he")

[node name="GreenHand" type="Sprite2D" parent="GreenCharacter"]
position = Vector2(27, -21)
texture = ExtResource("3_skrh2")

[node name="GreenHand2" type="Sprite2D" parent="GreenCharacter"]
position = Vector2(26, 35)
texture = ExtResource("3_skrh2")

[node name="WeaponAxeLarge" type="Sprite2D" parent="GreenCharacter"]
position = Vector2(39, -14)
rotation = 2.04634
texture = ExtResource("4_jfj22")

[node name="YellowCharacter" type="Sprite2D" parent="."]
position = Vector2(1330, 535)
texture = ExtResource("5_y64k6")

[node name="YellowHand" type="Sprite2D" parent="YellowCharacter"]
position = Vector2(-34, -12)
texture = ExtResource("6_a06kj")

[node name="YellowHand2" type="Sprite2D" parent="YellowCharacter"]
position = Vector2(30, -22)
texture = ExtResource("6_a06kj")

[node name="WeaponPole" type="Sprite2D" parent="YellowCharacter"]
position = Vector2(29, -24)
rotation = -0.403678
texture = ExtResource("7_p4gsv")

[node name="ShieldCurved" type="Sprite2D" parent="YellowCharacter"]
position = Vector2(-37, -16.9999)
rotation = -0.511231
texture = ExtResource("8_lnwvd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 697.0
grow_vertical = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 80

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("9_rwwwv")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="StartGame" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_m7rif")
text = "START GAME"

[node name="Join" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_m7rif")
text = "JOIN
"

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/StartGame" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
